2010-05-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-client-window.c (mb_wm_client_window_sync_properties):
	  Removed a few obsolete debug messages.

2010-03-26  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 0.2.90-3.

2010-03-26  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_press_handler):
	  Don't forget to ungrab the pointer.  Fixes the press-menu-blank
	  => menu-opens scenario.

2010-03-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 0.2.90-2.

2010-03-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	For NB#157265.  Activate the application menu only on ButtonRelease.

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_press_handler):
	  Handle ButtonRelease:s, but only if it happens outside the button
	  but within the decor.

2010-03-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 0.2.90-1.

2010-03-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	For NB#157265.

	* matchbox/core/mb-window-manager.c (mb_wm_unmanage_client):
	  Do restack even if an override-redirected window is being
	  unmanaged because its fullscreenness might have influenced
	  the composit manager.

2010-02-24  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.89

2010-02-24  Gordon Williams <gordon.williams@collabora.co.uk>

	NB#158114 - When starting device with beta theme, menu borders are 
	            from devel theme
	            
	* matchbox/theme-engines/mb-wm-theme.c: Remove prepending of theme
	path, as sometimes it points to the wrong theme. Hildon-desktop
	can then use the path relative to the *current* theme.

2010-02-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Bug 157390 - Regression: application menu borders missing

	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
	Tune hard-codings.

2010-02-22  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.88

2010-02-22  Gordon Williams <gordon.williams@collabora.co.uk>
